commit tree 71bfe4abfa7155ecdf3fce4fed6e832c2bc82b6c

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Dom Challenge</title>
   <style>
     #counter {
-      background-color: black;
+      background-color: rgba(14, 16, 122, 0.774);
       color: white;
       display: table;
       padding: 10px;
@@ -39,7 +39,7 @@
 
   </div>
 
-  <script src="js/index.min.js"></script>
+  <!-- <script src="js/index.min.js"></script> -->
   <script src="js/challenge.js"></script>
 </body>
 </html>
